feat: implement ponce variation and other fixes